fixed skills wrap margin

--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -19,6 +19,10 @@
   margin-top: -30px;
 }
 
+.skills__icons div {
+  margin-top: 30px;
+}
+
 .skills > p {
   margin-top: 2rem;
   margin-bottom: 0.6rem;
