--- a/styles/SvgIcon.module.css
+++ b/styles/SvgIcon.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   margin: 0.3rem;
-  margin-top: 30px;
   padding: 0.2rem;
   
   -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
@@ -25,7 +24,7 @@
   visibility: hidden;
   width: 100px;
   position: absolute;
-  top: 105%;
+  top: 35%;
   left: 50%;
   margin-left: -50px;
   text-align: center;
